--- a/scss/firstpage.scss
+++ b/scss/firstpage.scss
@@ -1,6 +1,7 @@
 // First page
 section {
   background: url(../images/photo-1480714378408-67cf0d13bc1b.png);
+  background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
   width: 100%;
