--- a/scss/contactus.scss
+++ b/scss/contactus.scss
@@ -4,7 +4,7 @@
   justify-content: center;
   background: #E27866;
   max-width: 100%;
-  width: 1400px;
+  // width: 1400px;
   height: 573px;
 }
 .contact {
