--- a/scss/reviews.scss
+++ b/scss/reviews.scss
@@ -5,7 +5,7 @@
   align-items: center;
   flex-direction: column;
   max-width: 100%;
-  width: 1400px;
+  // width: 1400px;
   height: 591px;
   }
   .customerpanel {
