--- a/scss/featuredpanel2.scss
+++ b/scss/featuredpanel2.scss
@@ -11,7 +11,7 @@
   justify-content: space-around;
   align-items: center;
   width: 100%;
-  width: 1348px;
+  // width: 1348px;
   height: 596px;
   background: #1c1c1c;
   color: #FFFFFF;
