--- a/scss/reviews.scss
+++ b/scss/reviews.scss
@@ -39,6 +39,7 @@
     min-width: 1000px;
     height: 300px;
     width: 600px;
+    z-index: -1;
   }
   // .swiper-wrapper {
   //   display: flex;
